[package]
name = "tmux-fuzzy-motion"
version = "0.1.2"
edition = "2024"
description = "Fuzzy hint motion for tmux copy-mode"
license = "MIT AND BSD-3-Clause"
repository = "https://github.com/yuki-yano/tmux-fuzzy-motion"
homepage = "https://github.com/yuki-yano/tmux-fuzzy-motion#readme"
readme = "README.md"
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE",
  "/NOTICE.md",
  "/README.md",
  "/README.ja.md",
  "/assets/migemo-compact-dict",
  "/src/**/*.rs",
  "/third_party/**/*.md",
  "/third_party/**/LICENSE*",
]

[[bin]]
name = "tmux-fuzzy-motion"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strip-ansi-escapes = "0.2.1"
tempfile = "3.23.0"
unicode-width = "0.2.2"

[dev-dependencies]
rand = "0.9.2"
